test/stack-effects-2.err.expect
test/stack-effects-2.ktn:1:2: error: expected stack type s2... but got s1... int
test/stack-effects-2.ktn:1:2: note: s2... is from here
test/stack-effects-2.ktn:1:2: note: s1... is from here
test/stack-effects-2.ktn:1:2: note: int is from here
